--- a/working-with-databases.Rmd
+++ b/working-with-databases.Rmd
@@ -1,3 +1,5 @@
+install.packages("RSQLite")
+
 ---
 title: "Using database"
 author: ""
@@ -17,6 +19,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 library(DBI)
 library(tidyverse)
+library(RSQLite)
 
 db <- dbConnect(RSQLite::SQLite(), "~/covid.sqlite")
 ```
