--- a/working-with-databases.Rmd
+++ b/working-with-databases.Rmd
@@ -1,4 +1,3 @@
-install.packages("RSQLite")
 
 ---
 title: "Using database"
@@ -33,9 +32,19 @@ db <- dbConnect(RSQLite::SQLite(), "~/covid.sqlite")
   - Run SQL queries there
 
 ```{r}
-
+dbGetQuery(db, "SELECT * FROM sqlite_master WHERE type='table';")
+```
+```{r}
+dbGetQuery(db, "SELECT * FROM demo LIMIT 5")
 ```
 
+
+```{r}
+dbGetQuery(db, "SELECT * FROM vac LIMIT 5")
+```
+```{r}
+dbGetQuery(db, "SELECT * FROM pres LIMIT 5")
+```
 
 ### Bit more complex queries
 
@@ -43,7 +52,11 @@ db <- dbConnect(RSQLite::SQLite(), "~/covid.sqlite")
 2. Get the data on 1 Aug, 2021, and select county with less than 10 pct vaccination
 
 ```{r}
+dbGetQuery(db, "SELECT Date, COUNT() FROM vac GROUP BY Date") %>%
+  arrange(desc(Date))
 
+dbGetQuery(db, "SELECT * FROM vac WHERE Date = '2022-07-27'") #Get the latest data for each county
+dbGetQuery(db, "SELECT * FROM vac WHERE Date = '2021-08-01' AND Series_Complete_Pop_Pct > 10") #Get the data on 1 Aug, 2021, and select county with less than 10 pct vaccination
 ```
 #### Ordering and aggregation
 
@@ -52,17 +65,19 @@ db <- dbConnect(RSQLite::SQLite(), "~/covid.sqlite")
 
 
 ```{r}
-
+dbGetQuery(db, "SELECT * FROM vac WHERE Date = '2021-08-14' ORDER BY Series_Complete_Pop_Pct DESC") 
+dbGetQuery(db, "SELECT Recip_State, SUM(Series_Complete_Yes) FROM vac WHERE Date = '2021-08-14' GROUP BY Recip_State") 
 ```
 
 
 ### Merging tables
 
 - merge vaccine and demo table by fips
-- (advanced) calculate per 1000 cases and deaths
+- (advanced) calculate per 1000 cases and deaths (nedarem)
 
 ```{r}
-
+dbGetQuery(db, "SELECT vac.*, demo.TotalPop FROM vac 
+            INNER JOIN demo ON vac.FIPS = demo.FIPS WHERE Date = '2021-08-14' ")
 ```
 
 ## dblyr
@@ -72,7 +87,9 @@ Now we will use `dbplyr`
 ### Get the object for each table
 
 ```{r}
-
+tb_demo <- tbl(db, "demo")
+tb_pres <- tbl(db, "pres")
+tb_vac <- tbl(db, "vac")
 ```
 
 
@@ -86,7 +103,7 @@ Now we will use `dbplyr`
   - Run SQL queries there
 
 ```{r}
-
+tb_demo %>% head(10) #%>% show_query()
 ```
 
 
@@ -96,7 +113,16 @@ Now we will use `dbplyr`
 2. Get the data on 14 Aug, 2021, and select county with more than 10 percent vaccination rate
 
 ```{r}
+tb_vac %>% 
+  count(Date) %>%
+  arrange(desc(Date))
 
+tb_vac %>%
+  filter(Date == "2022-07-27") #%>% show_query()
+
+tb_vac %>%
+  filter(Date == "2021-08-14") %>% 
+  filter(Series_Complete_Pop_Pct > 10) 
 ```
 #### Ordering and aggregation
 
@@ -105,7 +131,18 @@ Now we will use `dbplyr`
 
 
 ```{r}
+dbGetQuery(db, "SELECT * FROM vac WHERE Date = '2021-08-14' ORDER BY Series_Complete_Pop_Pct DESC") 
+dbGetQuery(db, "SELECT Recip_State, SUM(Series_Complete_Yes) FROM vac WHERE Date = '2021-08-14' GROUP BY Recip_State") 
 
+tb_vac  %>%
+  filter(Date == "2021-08-14") %>% 
+  arrange(desc(Series_Complete_Pop_Pct)) %>%
+  head()
+
+tb_vac %>%
+  filter(Date == "2021-08-14") %>%
+  group_by(Recip_State) %>%
+  summarise(sum(Series_Complete_Yes)) #%>% show_query(
 ```
 
 
@@ -115,7 +152,35 @@ Now we will use `dbplyr`
 - calculate vaccination rate manually from Series_Complete_Yes and TotalPop
   - compare with Series_Complete_Pop_Pct
 
+```{r}
+tb_vac %>%
+  inner_join(tb_demo, by = "FIPS")
+```
+
 
 ```{r}
-
+tmp <- tb_vac %>%
+  filter(Date == "2021-08-14") %>%
+  group_by(Recip_State) %>%
+  summarise(sum(Series_Complete_Yes)) #%>% show_query()
 ```
+
+
+```{r}
+tmp %>% class()
+```
+
+```{r}
+df_tmp <- tb_vac %>%
+  filter(Date == "2021-08-14") %>%
+  group_by(Recip_State) %>%
+  summarise(sum(Series_Complete_Yes)) %>% as_tibble()
+
+df_tmp2 <- tb_vac %>%
+  filter(Date == "2021-08-14") %>%
+  group_by(Recip_State) %>%
+  summarise(sum(Series_Complete_Yes)) %>% collect()
+
+df_tmp2 
+```
+
